# rust2prod

./: .gitignore  2Dockerfile.txt  Cargo.toml  Dockerfile  configuration.yaml  dontreadme.md  heroku.yml  sqlx-data.json  tempheroku.txt
.github/workflows/: general.yml  main.yml
configuration/: base.yaml  configuration.yaml  local.yaml  production.yaml
migrations/: 20220124124951_create_users_table.sql
scripts/: init_db.sh
src/: configuration.rs  constants.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/controller/: mod.rs  user_controller.rs
src/models/: user.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
